added rolling window

--- a/DataAnalysis.ipynb
+++ b/DataAnalysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 287,
+   "execution_count": 304,
    "id": "1dc10111",
    "metadata": {},
    "outputs": [
@@ -182,7 +182,7 @@
        "[2343 rows x 7 columns]"
       ]
      },
-     "execution_count": 287,
+     "execution_count": 304,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 305,
    "id": "44a9610b",
    "metadata": {},
    "outputs": [
@@ -244,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 289,
+   "execution_count": 306,
    "id": "add2f25f",
    "metadata": {},
    "outputs": [
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 290,
+   "execution_count": 307,
    "id": "7ed3127d",
    "metadata": {},
    "outputs": [
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 292,
+   "execution_count": 308,
    "id": "6d4856cc",
    "metadata": {},
    "outputs": [
@@ -562,7 +562,7 @@
        "[155 rows x 6 columns]"
       ]
      },
-     "execution_count": 292,
+     "execution_count": 308,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -609,7 +609,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 309,
    "id": "ac753163",
    "metadata": {},
    "outputs": [
@@ -646,7 +646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 296,
+   "execution_count": 310,
    "id": "20fce9fe",
    "metadata": {},
    "outputs": [
@@ -693,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 297,
+   "execution_count": 311,
    "id": "3b255d0a",
    "metadata": {},
    "outputs": [
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 299,
+   "execution_count": 312,
    "id": "bde22d05",
    "metadata": {},
    "outputs": [
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 300,
+   "execution_count": 313,
    "id": "c8c3c853",
    "metadata": {},
    "outputs": [
@@ -869,7 +869,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 301,
+   "execution_count": 314,
    "id": "35715dc4",
    "metadata": {},
    "outputs": [
@@ -909,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 302,
+   "execution_count": 315,
    "id": "060ddb7f",
    "metadata": {},
    "outputs": [
@@ -957,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 303,
+   "execution_count": 316,
    "id": "15a7e5f1",
    "metadata": {},
    "outputs": [
@@ -975,48 +975,6 @@
       "month_sin: 13,183.0503\n",
       "month_cos: 12,272.4430\n",
       "Intercept: 10,798.25\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\jcelm\\AppData\\Local\\Temp\\ipykernel_47668\\2226059990.py:3: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  dfp[\"month_sin\"] = np.sin(2 * np.pi * dfp[\"month\"] / 12.0)\n",
-      "C:\\Users\\jcelm\\AppData\\Local\\Temp\\ipykernel_47668\\2226059990.py:4: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  dfp[\"month_cos\"] = np.cos(2 * np.pi * dfp[\"month\"] / 12.0)\n",
-      "C:\\Users\\jcelm\\AppData\\Local\\Temp\\ipykernel_47668\\2226059990.py:3: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  dfp[\"month_sin\"] = np.sin(2 * np.pi * dfp[\"month\"] / 12.0)\n",
-      "C:\\Users\\jcelm\\AppData\\Local\\Temp\\ipykernel_47668\\2226059990.py:4: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  dfp[\"month_cos\"] = np.cos(2 * np.pi * dfp[\"month\"] / 12.0)\n",
-      "C:\\Users\\jcelm\\AppData\\Local\\Temp\\ipykernel_47668\\2226059990.py:3: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  dfp[\"month_sin\"] = np.sin(2 * np.pi * dfp[\"month\"] / 12.0)\n",
-      "C:\\Users\\jcelm\\AppData\\Local\\Temp\\ipykernel_47668\\2226059990.py:4: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  dfp[\"month_cos\"] = np.cos(2 * np.pi * dfp[\"month\"] / 12.0)\n"
      ]
     }
    ],
@@ -1043,6 +1001,317 @@
     "for name, w in zip(feat_cols_s2, lr_seasonal.coef_):\n",
     "    print(f\"{name:>9}: {w:,.4f}\")\n",
     "print(\"Intercept:\", f\"{lr_seasonal.intercept_:,.2f}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9b76e50b",
+   "metadata": {},
+   "source": [
+    "After choosing model (lag1 and cyclical months), we can finally test the model on the test data. The validation data and training data is concantenated in order to give the model more pre-test data to lower variance; compared again to baseline model on test data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 317,
+   "id": "3ddbcf87",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "=== FINAL EVAL on TEST (2 rows) ===\n",
+      "LinearRegression + cyc month:\n",
+      "LR+Season MAE:  42,171.99\n",
+      "LR+Season RMSE: 52,427.28\n",
+      "LR+Season MAPE: 4.59%\n",
+      "\n",
+      "Naive baseline (lag1 -> predict current):\n",
+      "Naive MAE:  47,720.65\n",
+      "Naive RMSE: 63,791.64\n",
+      "Naive MAPE: 5.19%\n",
+      "\n",
+      "Final coefficients after refit:\n",
+      "     lag1: 0.9914\n",
+      "month_sin: 14,105.0618\n",
+      "month_cos: 12,859.4994\n",
+      "Intercept: 10,188.42\n",
+      "\n",
+      "TEST window: 2025-07-01 → 2025-08-01 | rows: 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "# --- Join train + val for final fit ---\n",
+    "trainval = pd.concat([train, val], axis=0, ignore_index=True)\n",
+    "\n",
+    "feat_cols_final = [\"lag1\", \"month_sin\", \"month_cos\"]\n",
+    "target = \"avg_players\"\n",
+    "\n",
+    "# Fit on TRAIN+VAL\n",
+    "lr_final = LinearRegression()\n",
+    "lr_final.fit(trainval[feat_cols_final], trainval[target])\n",
+    "\n",
+    "# Predict on TEST (untouched)\n",
+    "y_test_pred_lr = lr_final.predict(test[feat_cols_final])\n",
+    "\n",
+    "print(\"=== FINAL EVAL on TEST (2 rows) ===\")\n",
+    "print(\"LinearRegression + cyc month:\")\n",
+    "eval_metrics(test[target].to_numpy(), y_test_pred_lr, label=\"LR+Season \")\n",
+    "\n",
+    "# Also show the naive baseline on TEST for reference\n",
+    "print(\"\\nNaive baseline (lag1 -> predict current):\")\n",
+    "eval_metrics(test[target].to_numpy(), test[\"lag1\"].to_numpy(), label=\"Naive \")\n",
+    "\n",
+    "print(\"\\nFinal coefficients after refit:\")\n",
+    "for n, w in zip(feat_cols_final, lr_final.coef_):\n",
+    "    print(f\"{n:>9}: {w:,.4f}\")\n",
+    "print(\"Intercept:\", f\"{lr_final.intercept_:,.2f}\")\n",
+    "\n",
+    "# Optional: show what dates TEST covers (sanity)\n",
+    "print(\"\\nTEST window:\", test['date'].min().date(), \"→\", test['date'].max().date(), \"| rows:\", len(test))\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ad820a0",
+   "metadata": {},
+   "source": [
+    "Rolling average window to account for  game update/seasonal change, should allow model to learn from the most recent and relevant data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 321,
+   "id": "e70a25fd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Folds evaluated: 131  |  Window: 24 months\n",
+      "LR+Season  — MAE: 39,691.93  RMSE: 62,082.03  MAPE: 6.79%\n",
+      "Naive lag1 — MAE: 33,696.85  RMSE: 51,633.43  MAPE: 5.99%\n",
+      "MAE improvement vs Naive: -17.79%\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>y</th>\n",
+       "      <th>lr</th>\n",
+       "      <th>naive</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>126</th>\n",
+       "      <td>2025-04-01</td>\n",
+       "      <td>1045701.65</td>\n",
+       "      <td>1.041200e+06</td>\n",
+       "      <td>1039662.81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>127</th>\n",
+       "      <td>2025-05-01</td>\n",
+       "      <td>1038596.81</td>\n",
+       "      <td>1.041702e+06</td>\n",
+       "      <td>1045701.65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>128</th>\n",
+       "      <td>2025-06-01</td>\n",
+       "      <td>1010123.99</td>\n",
+       "      <td>1.003056e+06</td>\n",
+       "      <td>1038596.81</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>129</th>\n",
+       "      <td>2025-07-01</td>\n",
+       "      <td>920069.98</td>\n",
+       "      <td>9.553619e+05</td>\n",
+       "      <td>1010123.99</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>130</th>\n",
+       "      <td>2025-08-01</td>\n",
+       "      <td>914682.70</td>\n",
+       "      <td>8.865156e+05</td>\n",
+       "      <td>920069.98</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          date           y            lr       naive\n",
+       "126 2025-04-01  1045701.65  1.041200e+06  1039662.81\n",
+       "127 2025-05-01  1038596.81  1.041702e+06  1045701.65\n",
+       "128 2025-06-01  1010123.99  1.003056e+06  1038596.81\n",
+       "129 2025-07-01   920069.98  9.553619e+05  1010123.99\n",
+       "130 2025-08-01   914682.70  8.865156e+05   920069.98"
+      ]
+     },
+     "execution_count": 321,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def backtest_sliding_24(df_feat, ycol=\"avg_players\", window=24):\n",
+    "    df = df_feat.copy()\n",
+    "\n",
+    "    # Ensure cyclical month features exist for ALL rows\n",
+    "    if \"month_sin\" not in df.columns or \"month_cos\" not in df.columns:\n",
+    "        df[\"month_sin\"] = np.sin(2 * np.pi * df[\"month\"] / 12.0)\n",
+    "        df[\"month_cos\"] = np.cos(2 * np.pi * df[\"month\"] / 12.0)\n",
+    "\n",
+    "    feat = [\"lag1\", \"month_sin\", \"month_cos\"]\n",
+    "    lr = LinearRegression()\n",
+    "\n",
+    "    dates, y_true, yhat_lr, yhat_naive = [], [], [], []\n",
+    "\n",
+    "    for t in range(window, len(df)):\n",
+    "        train_blk = df.iloc[t-window:t]\n",
+    "        test_row  = df.iloc[t:t+1]\n",
+    "\n",
+    "        # Drop any training rows with missing features/target\n",
+    "        X_tr = train_blk[feat]\n",
+    "        y_tr = train_blk[ycol]\n",
+    "        mask = X_tr.notna().all(1) & y_tr.notna() \n",
+    "        X_tr, y_tr = X_tr.loc[mask], y_tr.loc[mask]\n",
+    "        if len(X_tr) == 0:\n",
+    "            continue  # (very unlikely here)\n",
+    "\n",
+    "        # Fit on the last 24 months, predict month t\n",
+    "        lr.fit(X_tr, y_tr)\n",
+    "        yhat_lr.append(lr.predict(test_row[feat])[0])\n",
+    "        yhat_naive.append(test_row[\"lag1\"].iloc[0])  # persistence baseline\n",
+    "        y_true.append(test_row[ycol].iloc[0])\n",
+    "        dates.append(test_row[\"date\"].iloc[0])\n",
+    "\n",
+    "    res = pd.DataFrame({\"date\": dates, \"y\": y_true, \"lr\": yhat_lr, \"naive\": yhat_naive})\n",
+    "\n",
+    "    def metrics(y, yhat):\n",
+    "        mae  = mean_absolute_error(y, yhat)\n",
+    "        rmse = np.sqrt(mean_squared_error(y, yhat))\n",
+    "        y = np.asarray(y); yhat = np.asarray(yhat)\n",
+    "        mape = np.mean(np.where(y != 0, np.abs((y - yhat) / y), 0.0)) * 100\n",
+    "        return mae, rmse, mape\n",
+    "\n",
+    "    mae_lr, rmse_lr, mape_lr   = metrics(res[\"y\"], res[\"lr\"])\n",
+    "    mae_nv, rmse_nv, mape_nv   = metrics(res[\"y\"], res[\"naive\"])\n",
+    "    impr_mae = (mae_nv - mae_lr) / mae_nv * 100\n",
+    "\n",
+    "    print(f\"Folds evaluated: {len(res)}  |  Window: {window} months\")\n",
+    "    print(f\"LR+Season  — MAE: {mae_lr:,.2f}  RMSE: {rmse_lr:,.2f}  MAPE: {mape_lr:,.2f}%\")\n",
+    "    print(f\"Naive lag1 — MAE: {mae_nv:,.2f}  RMSE: {rmse_nv:,.2f}  MAPE: {mape_nv:,.2f}%\")\n",
+    "    print(f\"MAE improvement vs Naive: {impr_mae:,.2f}%\")\n",
+    "\n",
+    "    return res\n",
+    "\n",
+    "bt_res = backtest_sliding_24(df_feat, window=24)\n",
+    "bt_res.tail(5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ee51ec8",
+   "metadata": {},
+   "source": [
+    "Looks like "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 323,
+   "id": "3de960d3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[LR lag1 | win=24]   MAE: 37,618  RMSE: 60,213  MAPE: 6.44%   vs Naive MAE 33,697\n",
+      "[LR lag1 | win=24]   MAE: 47,111  RMSE: 64,712  MAPE: 8.94%   vs Naive MAE 33,697\n",
+      "[LR lag1 | win=12]   MAE: 40,175  RMSE: 63,329  MAPE: 8.05%   vs Naive MAE 31,633\n",
+      "[LR lag1 | win=24]   MAE: 39,692  RMSE: 62,082  MAPE: 6.79%   vs Naive MAE 33,697\n",
+      "[LR lag1 | win=36]   MAE: 38,158  RMSE: 60,453  MAPE: 6.28%   vs Naive MAE 34,932\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LinearRegression\n",
+    "\n",
+    "def backtest_model(df_feat, window, feat_cols, estimator, ycol=\"avg_players\"):\n",
+    "    df = df_feat.copy()\n",
+    "    # make sure cyc features exist if requested\n",
+    "    if \"month_sin\" in feat_cols and \"month_sin\" not in df.columns:\n",
+    "        df[\"month_sin\"] = np.sin(2*np.pi*df[\"month\"]/12.0)\n",
+    "        df[\"month_cos\"] = np.cos(2*np.pi*df[\"month\"]/12.0)\n",
+    "\n",
+    "    dates, y_true, yhat, naive = [], [], [], []\n",
+    "    for t in range(window, len(df)):\n",
+    "        tr = df.iloc[t-window:t]\n",
+    "        te = df.iloc[t:t+1]\n",
+    "        mask = tr[feat_cols + [ycol]].notna().all(axis=1)\n",
+    "        tr = tr.loc[mask]\n",
+    "        if len(tr) < 3: \n",
+    "            continue\n",
+    "        estimator.fit(tr[feat_cols], tr[ycol])\n",
+    "        yhat.append(estimator.predict(te[feat_cols])[0])\n",
+    "        naive.append(te[\"lag1\"].iloc[0])\n",
+    "        y_true.append(te[ycol].iloc[0])\n",
+    "        dates.append(te[\"date\"].iloc[0])\n",
+    "\n",
+    "    res = pd.DataFrame({\"date\":dates, \"y\":y_true, \"model\":yhat, \"naive\":naive})\n",
+    "    def mets(a,b):\n",
+    "        mae = mean_absolute_error(a,b); rmse = np.sqrt(mean_squared_error(a,b))\n",
+    "        mape = np.mean(np.where(np.array(a)!=0, np.abs((np.array(a)-np.array(b))/np.array(a)), 0))*100\n",
+    "        return mae, rmse, mape\n",
+    "    mae_m, rmse_m, mape_m = mets(res[\"y\"], res[\"model\"])\n",
+    "    mae_n, rmse_n, mape_n = mets(res[\"y\"], res[\"naive\"])\n",
+    "    print(f\"[LR lag1 | win={window}]   MAE: {mae_m:,.0f}  RMSE: {rmse_m:,.0f}  MAPE: {mape_m:,.2f}%   vs Naive MAE {mae_n:,.0f}\")\n",
+    "    return res\n",
+    "\n",
+    "_ = backtest_model(df_feat, window=24, feat_cols=[\"lag1\"], estimator=LinearRegression())\n",
+    "\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.linear_model import Ridge\n",
+    "\n",
+    "_ = backtest_model(\n",
+    "    df_feat, window=24,\n",
+    "    feat_cols=[\"lag1\",\"month_sin\",\"month_cos\"],\n",
+    "    estimator= make_pipeline(StandardScaler(), Ridge(alpha=10.0))\n",
+    ")\n",
+    "\n",
+    "for w in [12, 24, 36]:\n",
+    "    _ = backtest_model(df_feat, window=w,\n",
+    "        feat_cols=[\"lag1\",\"month_sin\",\"month_cos\"],\n",
+    "        estimator=LinearRegression())\n"
    ]
   }
  ],
